=== MetricFu 1.5.1 / 2010-7-28 

* Patch that allows graphers to skip dates that didn't generate metrics for that graph (GitHub Issue #20). - Chris Griego
* Fixed bug where if you try and use the gchart grapher with the rails_best_practices metric, it blows up (GitHub Issue #23). - Chris Griego
* Fixed 'If coverage is 0% metric_fu will explode' bug (GitHub Issue #6). - Stew Welbourne

=== MetricFu 1.5.0 / 2010-7-27

* Fixed bug where Flay results were not being reported.  Had to remove the ability to remove selected files from flay processing (undocumented feature that may go away soon if it keeps causing problems).  
* Rewrote Flog parsing/processing to use Flog programmatically. Note: the yaml output for Flog has changed significantly - Pages have now become MethodContainers.  This probably doesn't matter to you if you are not consuming the metric_fu yaml output.  
* Added support for using config files in Reek and Roodi (roodi support was already there but undocumented).
* Removed verify_dependencies! as it caused too much confusion to justify the limited set of problems it solved. In the post Bundler world it just didn't seem necessary to limit metric_fu dependencies.
* Deal with Rails 3 activesupport vs active_support problems. -  jinzhu

=== MetricFu 1.4.0 / 2010-06-19

* Added support for rails_best_practices gem - Richard Huang
* Added rails stats graphing -- Josh Cronemeyer
* Parameterize the filetypes for flay. By default flay supports haml as well as rb and has a plugin ability for other filetypes. - bfabry
* Support for Flog 2.4.0 line numbers - Dan Mayer
* Saikuro multi input directory patch - Spencer Dillard and Dan Mayer
* Can now parse rcov analysis file coming from multiple sources with an rcov :external option in the config. - Tarsoly András
* Fixed open file handles problem in the Saikuro analyzer - aselder, erebor
* Fix some problems with the google charts - Chris Griego
* Stop showing the googlecharts warning if you are not using google charts.